tests/baselines/reference/FunctionDeclaration6_es6.errors.txt
error TS2318: Cannot find global type 'IterableIterator'.
tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration6_es6.ts(1,18): error TS2523: 'yield' expressions cannot be used in a parameter initializer.


!!! error TS2318: Cannot find global type 'IterableIterator'.
==== tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration6_es6.ts (1 errors) ====
    function*foo(a = yield) {
                     ~~~~~
!!! error TS2523: 'yield' expressions cannot be used in a parameter initializer.
    }